# COSC428-CV-Project

./: .gitignore  LICENSE  Makefile  README.md  download_data.py  file_structure.md  hsi-test-3d-cnn.ipynb  main.py  pyproject.toml  readme.md  requirements.txt
.ipynb_checkpoints/: hsi-test-3d-cnn-checkpoint.ipynb
.virtual_documents/: hsi-test-3d-cnn.ipynb
hsi_classifier/: .dataset.py  __init__.py  config.py  create_training_data.py  dataset.py  datasets.py  features.py  load_data.py  make_dataset.py  plots.py  processed_data.py  test.py  train_model.py  utils.py
hsi_classifier/modeling/: models.py  predict.py  train.py
notebooks/: 20250628MM-IP-HSI.ipynb  hsi-test-3d-cnn.ipynb
src/: __init__.py  download_data.py  main.py
src/d01_data/: load_data.py
src/d04_modeling/: train_model.py
