[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hsi_classifier"
version = "0.0.1"
description = "This project classifies Hyper Spectral Images (HSIs) of land area captured via Satelite."
authors = [
  { name = "Mohammad Munem" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["hsi_classifier"]
include = ["pyproject.toml", "hsi_classifier/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["hsi_classifier"]
force-sort-within-sections = true

